# nanochat

./: .gitignore  .~lock.mst_results.csv#  .~lock.mst_results_p02.csv#  app.py  base_train_codex.ipynb  base_train_eval.ipynb  blackwell_compatibility.md  contextlinear.ipynb  early_exit_architecture_idea.md  eet_dense_comparison.html  eet_experiment_log.md  family_vs_dense_baseline_9charts.html  get_dim.py  linear_moe_variants_plan.md  meta_003808.json  modular_transformer_experiment_plan.md  mst_dense_comparison.html  mst_diagnostics_aggdist_d8.jsonl  mst_diagnostics_ffa.jsonl  mst_diagnostics_micro_attn_4_sub.jsonl  mst_results.csv  mst_results_p01  neurips_weaknesses.md  parse_log.py  parse_params.py  prepare.py  program.md  pyproject.toml  remixed_linear_analysis.md  remixed_linear_formula.md  remixed_linear_history.md  repo_orientation.ipynb  scratch.py  scratch_benchmark.py  scratch_eet_profile.py  scratch_explain.py  scratch_mst_benchmark.py  sweep_n21.state  sweep_p23.state  sweep_p23log.txt  (+12 more)
one-layer-deeper/: .dockerignore  .env.example  .gitignore  88403864-da17-4919-8db2-aca33d049f4d-metrics.jsonl  Dockerfile  Dockerfile.modal-deploy  README.md  docker-compose.yml  modal_runner.py  pyproject.toml  submission_validation.py
one-layer-deeper/.githooks/: pre-push
one-layer-deeper/benchmark/: __init__.py  api.py  batches.py  manifest.py  metrics.py  runner.py  validation.py
one-layer-deeper/client/: __init__.py  catalog.py  cli.py
one-layer-deeper/scripts/: ci.sh  deploy_modal.sh  generate_datasets.sh
one-layer-deeper/service/: __init__.py  admin.py  app.py  (+9 more)
(+143 files in other folders)
